[tool.poetry]
name = "repl_nix_flaskex"
version = "0.1.0"
description = ""
authors = ["Replit user <<>>"]

[tool.poetry.dependencies]
python = "^3.10"
WTForms = "^3.0.1"
bcrypt = "^4.0.1"
Flask = "^2.2.3"
SQLAlchemy = "^2.0.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
